# vee-assignment

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: assistant-workflow.mmd
evals/: __init__.py  evaluators.py  run_langsmith_eval.py  targets.py
evals/datasets/: starter.jsonl
scripts/: export_workflow_graph.py
src/vee_assignment/: cli.py  config.py
src/vee_assignment/graph/: __init__.py  assistant.py  email_flow.py  post_creation.py  post_flow.py  qa_flow.py  state.py
src/vee_assignment/prompts/: __init__.py  email.py  post.py  post_creation.py  qa.py  router.py
src/vee_assignment/schemas/: __init__.py  email.py  post.py  post_creation.py  qa.py  router.py
src/vee_assignment/tools/: jina.py
